--- a/Design.css
+++ b/Design.css
@@ -1,7 +1,21 @@
 body{
   padding: 70px;
+  background-image: url("https://i.pinimg.com/originals/15/35/8c/15358c8e7dbcb2fe92d8f2c4c9f3fdaa.jpg");
+  background-size: cover;
 }
 
 .jumbotron{
-  color: #2c3e50;
+  background-color: transparent !important;
+}
+
+.navbar{
+  background: #2c3e50;
+}
+h1{
+  font-size: 60px;
+  color: rgb(170, 170, 170);
+}
+p{
+  font-size: 20px;
+  color: rgb(170, 170, 170);
 }
